--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,15 +132,15 @@ h4{
 		margin-left:60%;
 		position:absolute;
 		display: inline-text;
-	
 		background-color: 	#FFFAFA;
 
 }
 #about-title{
 		font-size: 50px;
 		margin-top: 100px;
-/*		margin-left:15%;
-*/		border:5px solid black;
+		margin-left:15%;
+		
+
 
 
 		
@@ -270,7 +270,7 @@ h5{
    	background-color: 	#FFFAFA;
   	padding: 0.5rem;
 */
-
+/*whatup */
 
 }
 
